@@ -1,20 +1,19 @@
 package com.putoet.day9;
 
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
+import org.jetbrains.annotations.NotNull;
+
+import java.util.*;
 import java.util.stream.IntStream;
 
-public class XMAS {
+class XMAS {
     private final int preamble;
 
     public XMAS(int preamble) {
         this.preamble = preamble;
     }
 
-    public int firstInvalidOffset(List<Long> numbers) {
-        int offset = preamble;
+    public int firstInvalidOffset(@NotNull List<Long> numbers) {
+        var offset = preamble;
         while (isValid(numbers, offset))
             offset++;
 
@@ -22,7 +21,6 @@ public class XMAS {
     }
 
     private boolean isValid(List<Long> numbers, int offset) {
-        assert numbers != null;
         assert offset >= preamble && offset < numbers.size();
 
         long search = numbers.get(offset);
@@ -36,20 +34,19 @@ public class XMAS {
         return n1 != numbers.size() && (n1 != n2);
     }
 
-    public long weakness(List<Long> numbers, long invalidNumber) {
-        final List<Long> weaknessList = findWeakness(numbers, invalidNumber);
+    public OptionalLong weakness(@NotNull List<Long> numbers, long invalidNumber) {
+        final var weaknessList = findWeakness(numbers, invalidNumber);
         if (weaknessList.isEmpty())
-            return -1;
+            return OptionalLong.empty();
 
-        weaknessList.sort(Comparator.naturalOrder());
-        return weaknessList.get(0) + weaknessList.get(weaknessList.size() - 1);
+        return OptionalLong.of(weaknessList.get(0) + weaknessList.get(weaknessList.size() - 1));
 
     }
 
     private List<Long> findWeakness(List<Long> numbers, long invalidNumber) {
         boolean[] selected = null;
 
-        for (int offset = 0; offset < numbers.size(); offset++) {
+        for (var offset = 0; offset < numbers.size(); offset++) {
             selected = new boolean[numbers.size()];
             if (numbers.get(offset) != invalidNumber) {
                 selected[offset] = true;
@@ -60,14 +57,14 @@ public class XMAS {
             }
         }
 
-        return sum(selected, numbers) == invalidNumber ? list(selected, numbers) : List.of();
+        return sum(selected, numbers) == invalidNumber ? list(Objects.requireNonNull(selected), numbers) : List.of();
     }
 
     private boolean[] findWeakness(boolean[] selected, int lastSelected, List<Long> numbers, long invalidNumber) {
-        boolean[] copy = selected;
-        long found = sum(copy, numbers);
+        var copy = selected;
+        var found = sum(copy, numbers);
 
-        for (int offset = lastSelected + 1; offset < numbers.size() && found < invalidNumber; offset++) {
+        for (var offset = lastSelected + 1; offset < numbers.size() && found < invalidNumber; offset++) {
             copy = Arrays.copyOf(selected, selected.length);
             if (numbers.get(offset) != invalidNumber) {
                 copy[offset] = true;
@@ -84,8 +81,8 @@ public class XMAS {
         if (selected == null)
             return -1;
 
-        long sum = 0;
-        for (int idx = 0; idx < selected.length; idx++)
+        var sum = 0L;
+        for (var idx = 0; idx < selected.length; idx++)
             if (selected[idx]) sum += numbers.get(idx);
 
         return sum;
@@ -97,6 +94,7 @@ public class XMAS {
         return IntStream.range(0, selected.length)
                 .filter(idx -> selected[idx])
                 .mapToObj(numbers::get)
-                .collect(Collectors.toList());
+                .sorted()
+                .toList();
     }
 }
